--- a/kexizeroing.github.io/CSS effects collection.html
+++ b/kexizeroing.github.io/CSS effects collection.html
@@ -26,6 +26,7 @@ tags: [css]</p>
 <li><a href="#scroll-driven-animations">Scroll-driven animations</a></li>
 <li><a href="#reveal-hover-effect">Reveal hover effect</a></li>
 <li><a href="#rotating-highlight-effect">Rotating highlight effect</a></li>
+<li><a href="#the-periodic-table">The Periodic Table</a></li>
 </ul>
 <h3>Rainbow Artword</h3>
 <p>&lt;img alt="Rainbow Artword" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vxvgGly1h8t01qct5yj308q05ct8r.jpg" width="150"&gt;</p>
@@ -544,4 +545,21 @@ img:hover {
     }
   }
 &lt;/style&gt;
+</code></pre>
+<h3>The Periodic Table</h3>
+<p><a href="https://dev.to/madsstoumann/the-periodic-table-in-css-3lmm">https://dev.to/madsstoumann/the-periodic-table-in-css-3lmm</a></p>
+<pre><code class="lang-css">ol {
+  display: grid;
+  gap: 1px;
+  grid-template-columns: repeat(18, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+}
+li {
+  &amp;:nth-of-type(2) { grid-column: 18; } /* pushed to the last column */
+}
+
+/* filter */
+body:has(#alk:checked) li:not(.alk) { 
+  opacity: 0.2;
+}
 </code></pre>
