--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -184,6 +184,22 @@ clickOnce($0, () =&gt; console.log('click'));
 };
 </code></pre>
 <ol>
+<li><p>Implement the deep clone method.</p>
+<pre><code class="lang-js">function deepClone(obj) {
+if (obj === null || typeof obj !== 'object') {
+ return obj;
+}
+let copy = Array.isArray(obj) ? [] : {};
+
+for (let key in obj) {
+ if (obj.hasOwnProperty(key)) {
+   copy[key] = typeof obj[key] === 'object' ? deepClone(obj[key]) : obj[key];
+ }
+}
+return copy;
+}
+</code></pre>
+</li>
 <li><p>Use <code>setTimeout</code> to invoke a function multiple times in the fixed interval.
 ```js
 function repeat(func, times, ms, immediate) {
@@ -209,7 +225,7 @@ let count = 0;</p>
 const repeatFunc = repeat(console.log, 4, 3000, true);
 repeatFunc("hello");</p>
 <pre><code>
-8. Implement the render function to convert the virtual dom JSON to real DOM.
+9. Implement the render function to convert the virtual dom JSON to real DOM.
 ```js
 function render(vnode) {
   const { tag, props, children } = vnode;
@@ -247,10 +263,10 @@ function get(obj, path, defaultValue = undefined) {
 const keys = Array.isArray(path) ? path : path.split('.');
 let result = obj;</p>
 <p>for (const key of keys) {
- if (result == null || typeof result !== 'object') {
-   return defaultValue;
- }
- result = result[key];
+if (result == null || typeof result !== 'object') {
+  return defaultValue;
+}
+result = result[key];
 }</p>
 <p>return result === undefined ? defaultValue : result;
 }</p>
@@ -263,7 +279,7 @@ console.log(get(obj, ['a', 'b', 'c'])); // 42
 console.log(get(obj, 'a.b.d', 'default')); // 'default'
 console.log(get(obj, 'x.y.z', 'not found')); // 'not found'</p>
 <pre><code>
-10. How to add two big integers in js?
+11. How to add two big integers in js?
 ```js
 function add(A, B) {
   const AL = A.length
