--- a/kexizeroing.github.io/Intro to TypeScript.html
+++ b/kexizeroing.github.io/Intro to TypeScript.html
@@ -12,7 +12,7 @@ tags: [js]</p>
 <p><a href="https://github.com/JoshuaKGoldberg/create-typescript-app">create-typescript-app</a> is a one-stop-shop solution to set up a new repository with comprehensive, configurable, opinionated TypeScript tooling.</p>
 </blockquote>
 <p>TypeScript is a strongly typed programming language that builds on JavaScript. It is currently developed and maintained by Microsoft as an open source project. TypeScript supports multiple programming paradigms such as functional, generic, imperative, and object-oriented.</p>
-<p>Every time you write JavaScript in e.g. VS Code, TypeScript runs behind the curtains and gives you information on built-in APIs. In fact, a lot of people think that they can live without TypeScript because JavaScript support is so fantastic in modern editors. Guess what’s, it has always been TypeScript. <em>(In VS Code, open a <code>.ts</code> file, <code>Cmd+Shift+P</code> enter "Select TypeScript Version" to check. If you select "Use Workspace Version", the setting is written to <code>.vscode/settings.json</code>.)</em></p>
+<p>Every time you write JavaScript in e.g. VS Code, TypeScript runs behind the curtains and gives you information on built-in APIs. In fact, a lot of people think that they can live without TypeScript because JavaScript support is so fantastic in modern editors. Guess what’s, it has always been TypeScript. <em>In VS Code, open a <code>.ts</code> file, <code>Cmd+Shift+P</code> enter "Select TypeScript Version" to check. There is a "Use VS Code's Version" and "Use Workspace Version" (this is from node_modules).</em></p>
 <h2>Setting up TypeScript</h2>
 <p>To start off, the TypeScript compiler will need to be installed in order to convert TypeScript files into JavaScript files. To do this, TypeScript can either be installed globally or only available at the project level.</p>
 <pre><code class="lang-sh"># use npm
@@ -226,6 +226,10 @@ type TodoPreview = Pick&lt;Todo, "title" | "completed"&gt;
 type User = ReturnType&lt;typeof createUser&gt;
 // collect all arguments from a function in a tuple
 type Param = Parameters&lt;typeof createUser&gt;
+
+// define an object with index
+type Data1 = Record&lt;string, unknown&gt;
+type Data2 = { [key in string]: unknown }
 </code></pre>
 <pre><code class="lang-tsx">// https://www.totaltypescript.com/react-component-props-type-helper
 import { ComponentProps } from "react"
