--- a/kexizeroing.github.io/JavaScript basics you should know.html
+++ b/kexizeroing.github.io/JavaScript basics you should know.html
@@ -588,6 +588,7 @@ if (GetQueryString('type') &amp;&amp; $next) {
 }
 </code></pre>
 <h2>JSON stringify and parse</h2>
+<p><code>JSON.stringify(value, replacer, space)</code> converts a value to the JSON notation that the value represents, optionally replacing values if a replacer function is specified or optionally including only the specified properties if a replacer array is specified.</p>
 <ul>
 <li>If the value has a <code>toJSON()</code> method, it's responsible to define what data will be serialized.</li>
 <li><code>Boolean</code>, <code>Number</code>, and <code>String</code> objects are converted to the corresponding primitive values.</li>
@@ -1157,6 +1158,7 @@ async function parallel() {
 <blockquote><p>Concurrency is when two or more tasks can start, run, and complete in overlapping time periods. It doesn't necessarily mean they'll ever be running at the same instant. For example, multitasking on a single-core machine. Parallelism is when tasks literally run at the same time, e.g., on a multicore processor.</p>
 </blockquote>
 <h3><code>for await...of</code></h3>
+<p>The <code>for await..of</code> loop is a handy tool when working with asynchronous operations. It allows us to iterate over the results of promises or asynchronous generators in a more readable and intuitive way.</p>
 <p>When a <code>for await...of</code> loop iterates over an iterable, it first gets the iterable's <code>[Symbol.asyncIterator]()</code> method and calls it, which returns an async iterator. If it does not exist, it then looks for an <code>[Symbol.iterator]()</code> method, which returns a sync iterator. The sync iterator returned is then wrapped into an async iterator by wrapping every object returned from the <code>next()</code> method into a resolved or rejected promise. The loop then repeatedly calls the final async iterator's <code>next()</code> method and awaits the returned promise, producing the sequence of values to be assigned to variable.</p>
 <ul>
 <li><code>for await...of</code> works on both sync and async iterables, while <code>for...of</code> only works on sync iterables.</li>
