--- a/kexizeroing.github.io/JavaScript prototype chain, Class and Proxy.html
+++ b/kexizeroing.github.io/JavaScript prototype chain, Class and Proxy.html
@@ -161,6 +161,20 @@ tesla.#milesDriven     // Invalid
 console.log(ClassWithStaticField.staticField);
 ClassWithStaticField.staticMethod();
 </code></pre>
+<pre><code class="lang-js">class LogLevel {
+  static Debug = 0;
+  static Info = 1;
+  static Warn = 2;
+  static Error = 3;
+  static Critical = 4;
+
+  static assert(log_level) {
+    if (![LogLevel.Debug, LogLevel.Info, LogLevel.Warn, LogLevel.Error, LogLevel.Critical].includes(log_level)) {
+      throw new Error(`log_level must be an instance of LogLevel. Unsupported param ${JSON.stringify(log_level)}`);
+    }
+  }
+}
+</code></pre>
 <h3>Class getter and setter</h3>
 <p>Add methods prefixed with <code>get</code> or <code>set</code> to create a getter and setter, which are executed based on what you are doing: accessing the variable, or modifying its value. If you only have a getter, the property cannot be set; If you only have a setter, you can change the value but not access it.</p>
 <pre><code class="lang-js">class Circle {
