--- a/kexizeroing.github.io/Unlock the power of Generative UI.html
+++ b/kexizeroing.github.io/Unlock the power of Generative UI.html
@@ -141,6 +141,8 @@ export const AI = createAI({
   initialAIState
 });
 </code></pre>
+<blockquote><p>Update: <code>render</code> has been deprecated in favor of <a href="https://sdk.vercel.ai/docs/ai-sdk-rsc/streaming-react-components">streamUI</a>. Similar to AI SDK Core APIs (like <code>streamText</code> and <code>streamObject</code>), streamUI provides a single function to call a model and allow it to respond with React Server Components.</p>
+</blockquote>
 <p>Let's explain the above code in more detail.</p>
 <p>The <code>render</code> function is a powerful helper function to create a streamable UIs from an LLM response.</p>
 <ul>
