--- a/index.html
+++ b/index.html
@@ -6,12 +6,30 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8886 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8898 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=sund.site/%E7%A3%A8%E5%90%88.html>2024-09-16 磨合</a></li>
+
+<li><a href=blog.mauve.icu/Codeforces%20Round%20972%20%28Div.%202%29.html>2024-09-16 Codeforces Round 972 (Div. 2)</a></li>
+
+<li><a href=informal.top/Weekly-%234%20First%20insight%20of%20LLM%20accelerate.html>2024-09-15 Weekly-#4 First insight of LLM accelerate</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%2036%20-%20%E4%B8%80%E5%91%A8%E5%81%9A%E4%BA%86%E4%B8%A4%E6%AC%A1%E6%AF%94%E8%B5%9B%E4%B9%89%E5%B7%A5.html>2024-09-14 折返点 36 - 一周做了两次比赛义工</a></li>
+
+<li><a href=codeinchinese.com/%E3%80%8A%E9%BB%91%E7%A5%9E%E8%AF%9D%EF%BC%9A%E6%82%9F%E7%A9%BA%E3%80%8B%E9%9C%B8%E6%A6%9C%E5%85%A8%E7%90%83%E7%AC%AC%E4%B8%80%EF%BC%8C%E4%BB%8E%E6%B8%B8%E6%88%8F%E8%A1%8C%E4%B8%9A%E6%9D%A5%E7%9C%8B%EF%BC%8C%E9%BB%91%E6%82%9F%E7%A9%BA%E7%9A%84%E6%88%90%E5%8A%9F%E6%98%AF%E5%8F%AF%E4%BB%A5%E5%A4%8D%E5%88%B6%E7%9A%84%E5%90%97%EF%BC%9F.html>2024-09-12 《黑神话：悟空》霸榜全球第一，从游戏行业来看，黑悟空的成功是可以复制的吗？</a></li>
+
+<li><a href=jasonkayzk.github.io/Excel%E9%80%9A%E8%BF%87%E8%BA%AB%E4%BB%BD%E8%AF%81%E5%8F%B7%E5%88%97%E8%AE%A1%E7%AE%97%E6%80%A7%E5%88%AB.html>2024-09-11 Excel通过身份证号列计算性别</a></li>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%85%B3%E4%BA%8E%E9%98%9F%E5%88%97%E6%A8%A1%E5%9E%8B.html>2024-09-10 关于队列模型</a></li>
+
+<li><a href=cyril3.github.io/Fedora%2048%E5%B0%8F%E6%97%B6%E5%88%9D%E4%BD%93%E9%AA%8C%20%7C%20Bingwhispers.html>2024-09-10 Fedora 48小时初体验 | Bingwhispers</a></li>
+
+<li><a href=babyno.top/%E8%81%8A%E8%81%8A%E5%BB%BA%E7%AB%99%E9%82%A3%E4%BA%9B%E4%BA%8B.html>2024-09-10 聊聊建站那些事</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%9C%A8WSL%E4%B8%8A%E5%AE%89%E8%A3%85%E5%92%8C%E4%BD%BF%E7%94%A8MySQL.html>2024-09-08 在WSL上安装和使用MySQL</a></li>
 
@@ -37,7 +55,7 @@
 
 <li><a href=sund.site/Windows%20Efficient%20Setup.html>2024-08-31 Windows Efficient Setup</a></li>
 
-<li><a href=www.zhaohuabing.com/%E8%B6%85%E8%B6%8A%20Gateway%20API%EF%BC%9A%E6%B7%B1%E5%85%A5%E6%8E%A2%E7%B4%A2%20Envoy%20Gateway%20%E7%9A%84%E6%89%A9%E5%B1%95%E5%8A%9F%E8%83%BD%EF%BC%88%E6%9C%AA%E5%AE%8C%E6%88%90%EF%BC%89.html>2024-08-31 超越 Gateway API：深入探索 Envoy Gateway 的扩展功能（未完成）</a></li>
+<li><a href=www.zhaohuabing.com/%E8%B6%85%E8%B6%8A%20Gateway%20API%EF%BC%9A%E6%B7%B1%E5%85%A5%E6%8E%A2%E7%B4%A2%20Envoy%20Gateway%20%E7%9A%84%E6%89%A9%E5%B1%95%E5%8A%9F%E8%83%BD.html>2024-08-31 超越 Gateway API：深入探索 Envoy Gateway 的扩展功能</a></li>
 
 <li><a href=yuanj.top/%E6%96%87%E7%8C%AE%E5%88%86%E4%BA%AB%7C%E6%8B%9F%E5%8D%97%E8%8A%A5%E6%A0%B9%E9%83%A8%E7%9A%84%E5%8D%95%E7%BB%86%E8%83%9E%E5%88%86%E8%BE%A8%E7%8E%87%E8%B0%83%E6%8E%A7%E6%99%AF%E8%A7%82.html>2024-08-30 文献分享|拟南芥根部的单细胞分辨率调控景观</a></li>
 
@@ -10930,6 +10948,12 @@
 <li><a href=www.cnfeat.com/%E7%AC%A8%E6%96%B9%E6%B3%95%E5%AD%A6%E4%B9%A0%E5%91%A8%E6%8A%A5%2025W%EF%BC%9A%E6%8B%A5%E6%9C%89%E4%B8%80%E4%B8%AA%E8%87%AA%E5%B7%B1%E7%8B%AC%E7%AB%8B%E4%BA%A7%E5%93%81%E5%BE%88%E9%87%8D%E8%A6%81.html>2018-06-11 笨方法学习周报 25W：拥有一个自己独立产品很重要</a></li>
 
 <li><a href=zhangwenli.com/%E3%80%8A%E5%B0%8F%E8%84%9A%E4%B8%8E%E8%A5%BF%E6%9C%8D%E3%80%8B%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0.html>2018-06-11 《小脚与西服》读书笔记</a></li>
+
+<li><a href=tifa-233.com/%E9%A2%98%E8%A7%A3%20-%20%5BBalticOI%202016%20day1%5D%20%5BLuogu%20P4676%5D%20%5BLOJ%202782%5D%20Spiral.html>2018-06-09 题解 - [BalticOI 2016 day1] [Luogu P4676] [LOJ 2782] Spiral</a></li>
+
+<li><a href=tifa-233.com/%E9%A2%98%E8%A7%A3%20-%20%5BBalticOI%202016%20day1%5D%20%5BLuogu%20P4675%5D%20%5BLOJ%202781%5D%20Park.html>2018-06-09 题解 - [BalticOI 2016 day1] [Luogu P4675] [LOJ 2781] Park</a></li>
+
+<li><a href=tifa-233.com/%E9%A2%98%E8%A7%A3%20-%20%5BBalticOI%202016%20day1%5D%20%5BLuogu%20P4674%5D%20%5BLOJ%202780%5D%20Bosses.html>2018-06-09 题解 - [BalticOI 2016 day1] [Luogu P4674] [LOJ 2780] Bosses</a></li>
 
 <li><a href=iphyer.github.io/USA%E5%8D%B0%E8%B1%A17%20%3A%20%E5%8A%A0%E5%B7%9E%20%E2%80%94%E2%80%94%20%E6%B4%9B%E6%9D%89%E7%9F%B6%28Los%20Angeles%29%20and%20%E5%9C%A3%E5%9C%B0%E4%BA%9A%E5%93%A5%28San%20Diego%29%E6%B8%B8%E8%AE%B0.html>2018-06-09 USA印象7 : 加州 —— 洛杉矶(Los Angeles) and 圣地亚哥(San Diego)游记</a></li>
 
