--- a/kexizeroing.github.io/JavaScript String, Array and Object.html
+++ b/kexizeroing.github.io/JavaScript String, Array and Object.html
@@ -106,6 +106,21 @@ function replacer(match, p1, p2, p3, offset, string) {
 }
 'abc123#$'.replace(/([^\d]*)(\d*)([^\w]*)/, replacer); // abc-123-#$
 </code></pre>
+<h3>Avoid string comparisons</h3>
+<p>Javascript makes it easy to hide the real cost of string comparisons. If you need to compare strings in C, you’d use the <code>strcmp(a, b)</code> function. Javascript uses <code>===</code> instead, so you don’t see the <code>strcmp</code>. But it’s there, and a string comparison will usually require comparing each of the characters in the string with the ones in the other string; string comparison is O(n). With the advent of TypeScript this should be easily avoidable, as enums are integers by default.</p>
+<p>Integers are usually passed by value in JS engines, whereas strings are always passed as pointers, and memory accesses are expensive.</p>
+<pre><code class="lang-ts">// No
+enum Position {
+  TOP    = 'TOP',
+  BOTTOM = 'BOTTOM',
+}
+
+// Yes
+enum Position {
+  TOP,    // = 0
+  BOTTOM, // = 1
+}
+</code></pre>
 <h2>Array</h2>
 <h3>Check if the variable is an array</h3>
 <ul>
