--- a/kexizeroing.github.io/Run MySQL locally and manipulate Node.js files.html
+++ b/kexizeroing.github.io/Run MySQL locally and manipulate Node.js files.html
@@ -98,9 +98,25 @@ app.listen(3000, () =&gt; {
 </code></pre>
 <h2>Manipulate Node.js files</h2>
 <p>The <code>node:fs</code> module enables interacting with the file system in a way modeled on standard POSIX functions. You can either use the callback APIs or use the promise-based APIs.</p>
+<blockquote><p>A file descriptor is a way of representing an open file in a computer operating system. It's like a special number that identifies the file, and the operating system uses it to keep track of what's happening to the file. You can use the file descriptor to read, write, move around in the file, and close it. In a runtime like Node.js, the <code>fs</code> module abstracts the direct use of file descriptors by providing a more user-friendly API, but it still relies on them behind the scenes to manage file operations.</p>
+</blockquote>
+<pre><code class="lang-js">const fs = require("node:fs/promises");
+async function open_file() {
+  try {
+    const file_handle = await fs.open("test.js", "r", fs.constants.O_RDONLY);
+    console.log(file_handle.fd); // Print the value of the file descriptor `fd`
+  } catch (err) {
+    // i.e. ENOENT error stands for "Error NO ENTry" (File in path doesn't exist)
+  }
+}
+</code></pre>
+<p>Using <code>__dirname</code> and the <code>path</code> module ensures that you are referencing the correct path regardless of the current working directory you’re in. <code>__dirname</code> represents the absolute path of the directory containing the current JavaScript file. <code>path.join()</code> method joins all given path segments together using the platform-specific separator as a delimiter, then normalizes the resulting path.</p>
 <pre><code class="lang-js">import fs from 'node:fs/promises';
+import path from 'node:path';
+
 try {
-  const stats = await fs.stat('/Users/joe/test.txt');
+  const filePath = path.join(__dirname, 'test.txt');
+  const stats = await fs.stat(filePath);
   stats.isFile(); // true
   stats.isDirectory(); // false
   stats.isSymbolicLink(); // false
