--- a/kexizeroing.github.io/Understand the event loop.html
+++ b/kexizeroing.github.io/Understand the event loop.html
@@ -6,7 +6,7 @@ slug: understand-the-event-loop
 description: ""
 added: "Aug 26 2020"
 tags: [js]</p>
-<h2>updatedDate: "Mar 25 2024"</h2>
+<h2>updatedDate: "Sep 16 2024"</h2>
 <h2>Inside look at a browser</h2>
 <p>A process can be described as an application's executing program. A thread is the one that lives inside of process and executes any part of its process's program. Chrome has a multi-process architecture and each process is heavily multi-threaded. The <strong>renderer process</strong> is responsible for everything that happens inside of a tab.</p>
 <p>In the most simple case, you can imagine each tab has its own renderer process. Because processes have their own private memory space, they often contain copies of common infrastructure. In order to save memory, Chrome puts a limit on how many processes it can spin up. The limit varies depending on how much memory and CPU power your device has, but when Chrome hits the limit, it starts to run multiple tabs from the same site in one process.</p>
@@ -109,3 +109,20 @@ while (tasks.length &gt; 0) {
   await yieldToMain();
 }
 </code></pre>
+<p><code>scheduler.yield()</code> <em>(in Chrome 129)</em> provides a method for yielding control to the browser, which can be used to break up long tasks. Awaiting the promise returned by <code>scheduler.yield()</code> causes the current task to yield, continuing in a new browser task. This can be useful when you want to ensure that your JavaScript code doesn't block the main thread and negatively impact the user experience.</p>
+<ul>
+<li>With <code>scheduler.yield</code>, the continuation of work is placed at the front of the task queue.</li>
+<li>With <code>setTimeout</code>, the continuation of work is placed at the end of the task queue.</li>
+</ul>
+<pre><code class="lang-js">async function blocksInChunks() {
+  // Blocks for 500ms, then yields to the browser scheduler
+  blockMainThread(500);
+
+  await scheduler.yield(); // The browser scheduler can run other tasks at this point
+
+  // Blocks for another 500ms and returns
+  blockMainThread(500);
+}
+</code></pre>
+<blockquote><p>The api and implementation is the result of a multi year collab effort between (meta) the react team and (google) chrome, and underpins react’s concurrent mode. Now being implemented in browsers as a standard.</p>
+</blockquote>
